@@ -234,5 +234,3 @@ No habilita boton de cerrar todas las ventanas
 
 -conviene ocultar Wall y Wextra en version estable? puede salir algun warning util solo en version estable? no deberia, son warnings muy especificos
 
-
--ventanas en background con menu cerrado: siempre hay una que detecta como si estuviera delante y le dibuja boton de cerrar
